# Prism

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
apps/web/src/components/decode/: ErrorCard.tsx
apps/web/src/lib/: types.ts
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: config.rs  main.rs  version_check.rs
crates/cli/src/commands/: auth.rs  clean.rs  db.rs  decode.rs  diagnostic.rs  diff.rs  export.rs  inspect.rs  mod.rs  profile.rs  replay.rs  serve.rs  trace.rs  whatif.rs
crates/cli/src/output/: auth_tree.rs  compact.rs  human.rs  json.rs  mod.rs  renderers.rs  theme.rs  trace_tree.rs
crates/cli/src/tui/: app.rs  mod.rs  state.rs
crates/cli/src/tui/widgets/: mod.rs  timeline.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  scratch.rs
crates/core/src/archive/: mod.rs
crates/core/src/cache/: mod.rs  store.rs
crates/core/src/debugger/: breakpoint.rs  mod.rs  stepping.rs  whatif.rs
crates/core/src/decode/: auth.rs  context.rs  contract_error.rs  diagnostic.rs  host_error.rs  mod.rs  report.rs  walker.rs
crates/core/src/decode/mappings/: auth.rs  budget.rs  context.rs  mod.rs  storage.rs  value.rs
crates/core/src/network/: config.rs  mod.rs
crates/core/src/replay/: differ.rs  mod.rs  profiler.rs  sandbox.rs  state.rs  trace.rs
crates/core/src/rpc/: client.rs  jsonrpc.rs  metrics.rs
crates/core/src/spec/: decoder.rs  mod.rs
crates/core/src/taxonomy/: loader.rs  mod.rs  schema.rs
crates/core/src/taxonomy/data/: auth.toml  context.toml
crates/core/src/types/: address.rs  config.rs  mod.rs  report.rs  trace.rs
crates/core/src/xdr/: codec.rs  mod.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: README.md
docs/architecture/: overview.md
