[lints]
workspace = true

[package]
name = "prism-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Prism core compiled to WebAssembly for browser-based decoding"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
prism-core = { workspace = true, features = ["wasm-compat"] }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
